// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`office-window renders correctly with full props 1`] = `
<div
  className="css-9ws94b-OfficeWindow"
>
  <div
    className="header css-1ydy459-OfficeWindow"
  >
    <div
      className="css-1sdua8l-ToolsHeader"
    >
      <div
        className="css-w2t5un-ToolsHeader"
      >
        <div
          className="css-1ss9q1q-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
        <div
          className="css-1b4s2bm-Text"
        >
          E-Mails
        </div>
      </div>
      <div
        className="css-w2t5un-ToolsHeader"
      >
        <button
          className="css-1dzgoe2-Button"
          disabled={false}
          onClick={[Function]}
          title="viewer_tools__minimize_tool_label"
        >
          <div
            className="css-95j2hm-Button"
          >
            <div
              className="css-13zef26-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
        </button>
        <button
          className="css-1dzgoe2-Button"
          disabled={false}
          onClick={[Function]}
          title="viewer_tools__close_tool_label"
        >
          <div
            className="css-95j2hm-Button"
          >
            <div
              className="css-13zef26-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="css-pystkl-OfficeWindow"
  />
</div>
`;

exports[`office-window renders correctly with required props 1`] = `
<div
  className="css-9ws94b-OfficeWindow"
>
  <div
    className="header css-1ydy459-OfficeWindow"
  >
    <div
      className="css-1sdua8l-ToolsHeader"
    >
      <div
        className="css-w2t5un-ToolsHeader"
      >
        <div
          className="css-1ss9q1q-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
        <div
          className="css-1b4s2bm-Text"
        >
          E-Mails
        </div>
      </div>
      <div
        className="css-w2t5un-ToolsHeader"
      />
    </div>
  </div>
  <div
    className="css-pystkl-OfficeWindow"
  />
</div>
`;
